features/layout/page-container/page-container.module.scss
@use "@styles/color";
@use "@styles/font";
@use "@styles/space";
@use "@styles/breakpoint";
@use "@styles/misc";

.container {
  height: 100vh;
  display: grid;
  grid-template: "navigation" auto "content" 1fr "footer" auto / 1fr;
  background: color.$gray-900;

  @media (min-width: breakpoint.$desktop) {
    display: grid;
    grid-template: "navigation content" 1fr "navigation footer" auto / auto 1fr;
  }
}

.navigation {
  grid-area: navigation;
}

.main {
  display: flex;
  grid-area: content;
}

.contentContainer {
  flex: 1;
  margin-top: misc.$header-height;
  padding: space.$s8 space.$s3;
  background: white;

  @media (min-width: breakpoint.$desktop) {
    min-height: calc(100vh - space.$s3 - 2 * space.$s8);
    margin-top: space.$s3;
    padding: space.$s8;
    border-top-left-radius: space.$s10;
  }
}

.title {
  margin: space.$s0 space.$s0 space.$s1;
  color: color.$gray-900;
  font: font.$display-sm-medium;
}

.info {
  margin-bottom: space.$s8;
  color: color.$gray-500;
  font: font.$text-md-regular;
}

